2002-06-09  wakaba <w@suika.fam.cx>

	* Jcode.pm: Support 'name_minimumizer'.

2002-06-06  wakaba <w@suika.fam.cx>

	* Jcode.pm: 
	- Supports NKF.pm and Unicode::Japanese.pm.
	- (iso_2022_mime_charset_name): New function.
	- (euc_japan_mime_charset_name): Likewise.
	- (shift_jis_mime_charset_name): Likewise.
	- (x-euc-jisx0213-packed): New alias MIME name of EUC-JISX0213.

2002-06-01  wakaba <w@suika.fam.cx>

	* Jcode.pm: 
	- Returns minimum charset name.
	- Make-charset "junet" as an alias of ISO-2022-JP.

2002-05-30  wakaba <w@suika.fam.cx>

	* Jcode.pm: New module.