@@ -1,3 +1,10 @@
+2002-06-23  Wakaba <w@suika.fam.cx>
+
+	* Jcode.pm: Remove name_minimumizers.  (Moved to
+	Message::MIME::Charset.)
+	* Jcode.pm: Give 'cte_7bit_preferred' property
+	when make_charset of some charset.
+
 2002-06-09  wakaba <w@suika.fam.cx>
 
 	* Jcode.pm: Support 'name_minimumizer'.
